# dialogger

./: .gitignore
backend/: .env  .gitignore  Cargo.toml
backend/migrations/: 1_base.sql  2_extend_sentence.sql
backend/resources/: test_data.sql  test_data.surql  wixxer.srt
backend/schemas/: character.surql  conversation.surql  location.surql  movie.surql  scene.surql  script_migration.surql  sentence.surql
backend/src/: main.rs  model.rs  scalar.rs
backend/src/model/: character.rs  conversation.rs  location.rs  mod.rs  movie.rs  scene.rs  sentence.rs
backend/src/parse/: mod.rs
frontend/: Cargo.toml  tailwind.config.js
frontend/src/: main.rs
