[package]
name = "dialogger-backend"
version = "0.1.0"
description = "async-graphql for axum"
edition = "2021"

[dependencies]
async-graphql = "5.0.9"
async-graphql-axum = "5.0.9"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
hyper = "0.14"
axum = { version = "0.6.0", features = ["headers"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono" ] }
serde = { version = "1.0.163", features = ["derive"] }
dotenvy = "0.15.7"
simple_logger = "4.1.0"
log = "0.4.18"
encoding_rs = "0.8.32"
